--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@
                 <h3>Let's Build</h3>
                 <section>
                     <h5>Bot creation</h5>
-                    <p class="fragment fade-up">We need first to create a Facebook page and a Facebook app.</p>
+                    <p class="fragment fade-up">First,we need to create a Facebook page and a Facebook app.</p>
                     <p class="fragment fade-up">Then we add messeneger as a product of our app.</p>
-                    <p class="fragment fade-up">Now we need to validate the our server.</p>
+                    <p class="fragment fade-up">Now we need to validate our server.</p>
                 </section>
                 <section>
                     <h5>The boilerPlate</h5>
